Fixed spacing on elements in sticky footer.

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@ code {
     monospace;
 }
 
-/* Styling for Sticky Footer in Footer Component */
+/* Sticky Footer in Footer Component */
 .footer {
+  /* Main styling */
   margin-top: 1rem;
   padding: 0.5rem;
   background-color: rgb(255, 255, 255);
@@ -21,6 +22,10 @@ code {
   bottom: 0;
   left: 0;
   width: 100%;
+
+  /* Flex centering */
+  display: flex;
+  align-items: center;
 }
 
 .social_icons {
